feat: implement vesting vault with hardening and tests